# WickedWinchProtocol

./: CMakeLists.txt  README.md  go.mod
c/include/: WickedMessage.h
cpp/: Path.cc  Path.h  Path_test.cc  Postfix.cc  Postfix.h  Postfix_test.cc  WickedWinchProtocol.h
cpp/include/: WickedWinchProtocol.h
cpp/include/WickedWinchProtocol/: EvalStatus.h  Path.h  Postfix.h
cpp/patheval/: CMakeLists.txt  PathEval.cc  PathEval.h  PathEval_test.cc
cpp/postfix/: CMakeLists.txt  PostfixExpression.cc  PostfixExpression.h  PostfixExpression_test.cc
cpp/src/: Path.cc  Postfix.cc
cpp/tests/: Path_test.cc  Postfix_test.cc
go/message/: message.go  message_test.go
go/postfix/: PostfixExpression.go  PostfixExpression_test.go  path.go  path_test.go  postfix.go  postfix_test.go
proto/: CMakeLists.txt  PathExpression.pb.go  PathExpression.proto
